RESOLVED FIXED259535
WebXR build fails on visionOS
https://bugs.webkit.org/show_bug.cgi?id=259535
Summary WebXR build fails on visionOS
Mike Wyrzykowski
Reported 2023-07-26 15:26:52 PDT
WebXR build fails on visionOS
Attachments
Radar WebKit Bug Importer
Comment 1 2023-07-26 15:27:16 PDT
Mike Wyrzykowski
Comment 2 2023-07-26 15:31:43 PDT
EWS
Comment 3 2023-07-26 18:17:55 PDT
Committed 266347@main (543e3c1db166): <https://commits.webkit.org/266347@main> Reviewed commits have been landed. Closing PR #16116 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.