WebXR build fails on visionOS https://bugs.webkit.org/show_bug.cgi?id=259535 <radar://112938443>

Reviewed by Matt Woodrow and Dean Jackson.

Fix build for visionOS after 266327@main

* Source/WebCore/Modules/webxr/WebXROpaqueFramebuffer.cpp:
(WebCore::makeEGLImageSource):
* Source/WebCore/platform/xr/PlatformXR.h:
(PlatformXR::Device::FrameData::LayerData::encode const):
* Source/WebKit/Shared/RemoteLayerTree/CGDisplayList.cpp:
(WebKit::CGDisplayList::encode):
(WebKit::CGDisplayList::encode const): Deleted.
* Source/WebKit/Shared/RemoteLayerTree/CGDisplayList.h:

Canonical link: https://commits.webkit.org/266347@main